--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@ novalidate>
 
 <style>
 
+	{
+	body
+		background-image:"PNG image (.png)";
+	}
  input[type=text]{
 background-color: #3CBC8D;
   color: white;
