--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@ novalidate>
 
 <style>
 
-	{
-	body
-		background-image:"PNG image (.png)";
-	}
+	
  input[type=text]{
 background-color: #3CBC8D;
   color: white;
   border-radius: 4px;
+background-image:url('PNG image (.png)'); 
 }
 
 	   
