--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ novalidate>
 background-color: #3CBC8D;
   color: white;
   border-radius: 4px;
-background-image:url('PNG image (.png)'); 
+background-image:url('img.png'); 
 }
 
 	   
