--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ novalidate>
 
 	
  input[type=text]{
-  color: white;
+  color: black;
   border-radius: 4px;
 background-image:url('img.png'); 
 }
