--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 <title> FORM </title>
 </head>
-<body>
+<body >
+
 <form action="action.php"method="post" target="_blank" autocoplete="on"
 novalidate>
 
 
 <style>
-
-	
  input[type=text]{
-  color: black;
+background-color: #3CBC8D;
+  color: white;
   border-radius: 4px;
-background-image:url('img.png'); 
-}
+  background-image:url(JPEG image (.jpg)');
 
-	   
+}	   
 </style>
 <h1>SCHOLARSHIP FORM</h1>
   <label for="fname">FIRST NAME:</label><br>
